refactor(docker): check if mysql is running before npm start

--- a/db_svc/Dockerfile
+++ b/db_svc/Dockerfile
@@ -1,6 +1,10 @@
 # Create image from latest mysql
 FROM mysql:8
 
+# Environment
+ENV MYSQL_ROOT_PASSWORD=admin
+ENV MYSQL_DATABASE=storeo_db
+
 # Setup mysql on boot
 CMD ["mysqld", "--default-authentication-plugin=mysql_native_password"]
 ADD setup.sql /docker-entrypoint-initdb.d
