--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
   router:
     build: ./router_svc
     ports:
-     - '8080:8080'
+     - ${ROUTER_PORT}
     depends_on:
      - store
     environment:
@@ -18,9 +18,9 @@ services:
   store:
     # Go to specified folder and look for the service's Dockerfile there
     build: ./store_svc
-    # Map hostPort:containerPort (host is on the left!)
+    # Map hostPort:containerPort (host is on twhe left!)
     ports:
-     - '3000:3000'
+     - ${STORE_PORT}
     # Define dependency, so that store can connect to db
     depends_on:
      - db
@@ -40,7 +40,7 @@ services:
     build: ./db_svc
     # Map hostPort:containerPort (host is on the left!)
     ports:
-     - '3306:3306'
+     - ${DB_PORT}
     # Set up a default mySQL db
     environment:
      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
