feat(auth): add initial version of auth_svc and related stuff

--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,9 @@ DB_PASSWORD=evangelion
 DB_NAME=storeo_db
 DB_HOST=db
 DB_PORT=3306
-STORE_PORT=3000
 ROUTER_PORT=8080
+AUTH_PORT=3001
+STORE_PORT=3000
 AUTH_DB_PORT=27017
 
 JWT_SECRET=a9bqbdfb^yFGM5mVDxPJZ
