refactor(dockerfiles): updated dockerfiles

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,16 +4,35 @@ version: '3'
 # Define the services
 services:
 
+  payments:
+    build: ./payments_svc
+    ports:
+     - ${PAYMENTS_PORT}
+    volumes:
+     - ./payments_svc:/payments
+    environment:
+     - SK_STRIPE=${SK_STRIPE}
+     - PAYMENTS_PORT=${PAYMENTS_PORT}
+    command: nodemon index.js
+
   router:
     build: ./router_svc
     ports:
-     - ${ROUTER_PORT}
+     - ${ROUTER_PORT}:${ROUTER_PORT}
+    volumes:
+     - ./router_svc:/router
     depends_on:
      - store
+     - payments
     environment:
      - STORE_NAME=store
      - STORE_PORT=${STORE_PORT}
+     - AUTH_NAME=store
+     - AUTH_PORT=${AUTH_PORT}
+     - PAYMENTS_NAME=payments
+     - PAYMENTS_PORT=${PAYMENTS_PORT}
      - ROUTER_PORT=${ROUTER_PORT}
+    command: nodemon index.js
 
   store:
     # Go to specified folder and look for the service's Dockerfile there
@@ -21,6 +40,8 @@ services:
     # Map hostPort:containerPort (host is on twhe left!)
     ports:
      - ${STORE_PORT}
+    volumes:
+     - ./store_svc:/store
     # Define dependency, so that store can connect to db
     depends_on:
      - db
