--- a/router_svc/package.json
+++ b/router_svc/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.16.4",
+    "morgan": "^1.9.1",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7"
   }
