--- a/auth_svc/package.json
+++ b/auth_svc/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "eslint": "^5.12.1",
     "eslint-config-airbnb-base": "^13.1.0",
