--- a/auth_svc/package.json
+++ b/auth_svc/package.json
@@ -23,7 +23,16 @@
     "prettier-eslint": "^8.8.2"
   },
   "dependencies": {
+    "atob": "^2.1.2",
+    "bcrypt": "^3.0.3",
+    "mysql": "^2.16.0",
+    "mysql2": "^1.6.4",
+    "body-parser": "^1.18.3",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
-    "mongoose": "^5.4.18"
+    "jsonwebtoken": "^8.5.0",
+    "mongoose": "^5.4.18",
+    "morgan": "^1.9.1",
+    "sequelize": "^4.43.0"
   }
 }
