--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,27 +58,31 @@ services:
     build: ./auth_svc
     # Map hostPort:containerPort (host is on the left!)
     ports:
-     - "3001:${AUTH_PORT}"
+     - ${AUTH_PORT}
     # Map the local dev files to enable nodemon inside docker container
     volumes:
      - ./auth_svc:/auth
+     - /auth/node_modules/
     # Define dependency, so that store can connect to db
     depends_on:
      - auth_db
     # Set the environment variables
     environment:
-     - AUTH_PORT=${AUTH_PORT}
+     - AUTH_DB_USER=${AUTH_DB_USER}
+     - AUTH_DB_PASSWORD=${AUTH_DB_PASSWORD}
+     - AUTH_DB_NAME=${AUTH_DB_NAME}
+     - AUTH_DB_HOST=${AUTH_DB_HOST}
      - AUTH_DB_PORT=${AUTH_DB_PORT}
-     - AUTH_DB_NAME=auth_db
+     - JWT_SECRET=${JWT_SECRET}
+     - SK_STRIPE=${SK_STRIPE}
 
   auth_db:
-    # Use the official latest stable mongo image
-    image: mongo:4
-    # Make sure to keep restarting the server if it fails
-    restart: always
-    # Designate a local directory to persist data
-    volumes:
-     - ./auth_data:/data/auth_db
-    # Expose the correct port for connections
+    # Go to specified folder and look for the service's Dockerfile there
+    build: ./auth_db_svc
+    # Map hostPort:containerPort (host is on the left!)
     ports:
      - ${AUTH_DB_PORT}
+    # Set up a default mySQL db
+    environment:
+     - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+     - MYSQL_DATABASE=${AUTH_DB_NAME}
