--- a/router_svc/package.json
+++ b/router_svc/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.4",
     "morgan": "^1.9.1",
     "request": "^2.88.0",
-    "request-promise-native": "^1.0.7"
+    "request-promise-native": "^1.0.7",
+    "through2": "^3.0.1"
   }
 }
