feat(env): add dev and prod environments to all node servers

--- a/.env.example
+++ b/.env.example
@@ -33,3 +33,6 @@ MYSQL_DATABASE=storeo_db
 # Stripe config
 JWT_SECRET=a9bqbdfb^yFGM5mVDxPJZ
 SK_STRIPE=sk_test_wffTXj5jjdjQidaWhtdCGqFRz
+
+# Global ENV variable (dev or prod)
+ENV=dev
