--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
      - store
      - payments
      - auth
+    # Restart the server on crashes
     restart: always
     # Set environment variable, which is overwritten
     environment:
@@ -42,6 +43,8 @@ services:
     volumes:
      - ./payments_svc:/payments
      - /payments/node_modules/
+    # Restart the server on crashes
+    restart: always
     # Set environment variable, which is overwritten
     environment:
      - SK_STRIPE=${SK_STRIPE}
@@ -62,6 +65,8 @@ services:
     # Define dependency, so that store can connect to db
     depends_on:
      - db
+    # Restart the server on crashes
+    restart: always
     # Map the local dev files to enable nodemon inside docker container
     volumes:
      - ./store_svc:/server
@@ -76,6 +81,8 @@ services:
      - STORE_PORT=${STORE_PORT}
      - JWT_SECRET=${JWT_SECRET}
      - SK_STRIPE=${SK_STRIPE}
+    # Run the store service (dev or prod)
+    command: npm run ${ENV}
 
   db:
     # Go to specified folder and look for the service's Dockerfile there
@@ -83,6 +90,8 @@ services:
     # Map hostPort:containerPort (host is on the left!)
     ports:
      - ${DB_PORT}
+    # Restart the server on crashes
+    restart: always
     # Set up a default mySQL db
     environment:
      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
@@ -101,6 +110,8 @@ services:
     # Define dependency, so that store can connect to db
     depends_on:
      - auth_db
+    # Restart the server on crashes
+    restart: always
     # Set the environment variables
     environment:
      - AUTH_DB_USER=${AUTH_DB_USER}
@@ -110,6 +121,8 @@ services:
      - AUTH_DB_PORT=${AUTH_DB_PORT}
      - JWT_SECRET=${JWT_SECRET}
      - SK_STRIPE=${SK_STRIPE}
+    # Run the store service (dev or prod)
+    command: npm run ${ENV}
 
   auth_db:
     # Go to specified folder and look for the service's Dockerfile there
@@ -117,6 +130,8 @@ services:
     # Map hostPort:containerPort (host is on the left!)
     ports:
      - ${AUTH_DB_PORT}
+    # Restart the server on crashes
+    restart: always
     # Set up a default mySQL db
     environment:
      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
