--- a/store_svc/package.json
+++ b/store_svc/package.json
@@ -7,6 +7,8 @@
     "test": "test",
     "precommit": "npm run lint",
     "lint": "eslint .",
+    "dev": "nodemon --exec babel-node index.js",
+    "prod": "node --exec babel-node index.js",
     "start": "nodemon --exec babel-node index.js",
     "populate": "npx knex seed:run --env development"
   },
