--- a/auth_svc/package.json
+++ b/auth_svc/package.json
@@ -8,11 +8,12 @@
     "lint": "eslint .",
     "dev": "nodemon --exec babel-node index.js",
     "prod": "node --exec babel-node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx mocha --require babel-register --require babel-polyfill ./test/*.test.js"
   },
   "author": "Felix Weinberger",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.3.4",
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
@@ -20,8 +21,10 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.15.0",
     "husky": "^1.3.1",
+    "mocha": "^6.0.2",
     "nodemon": "^1.18.9",
-    "prettier-eslint": "^8.8.2"
+    "prettier-eslint": "^8.8.2",
+    "supertest": "^4.0.0"
   },
   "dependencies": {
     "atob": "^2.1.2",
