--- a/router_svc/package.json
+++ b/router_svc/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon index.js",
     "prod": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha ./tests"
   },
   "author": "",
   "license": "ISC",
@@ -17,5 +17,12 @@
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7",
     "through2": "^3.0.1"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "mocha": "^6.0.2",
+    "sinon": "^7.2.7",
+    "supertest": "^4.0.0"
   }
 }
