--- a/router_svc/package.json
+++ b/router_svc/package.json
@@ -22,6 +22,7 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "mocha": "^6.0.2",
+    "node-mocks-http": "^1.7.3",
     "sinon": "^7.2.7",
     "supertest": "^4.0.0"
   }
