--- a/auth_svc/package.json
+++ b/auth_svc/package.json
@@ -8,15 +8,17 @@
     "lint": "eslint .",
     "dev": "nodemon --exec babel-node index.js",
     "prod": "node --exec babel-node index.js",
-    "test": "npx mocha --require babel-register --require babel-polyfill ./test/*.test.js"
+    "test": "TEST_ENV=true mocha --require @babel/register --require @babel/polyfill --exit"
   },
   "author": "Felix Weinberger",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "babel-cli": "^6.26.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
+    "@babel/cli": "^7.0.0-rc.1",
+    "@babel/core": "^7.0.0-rc.1",
+    "@babel/node": "^7.0.0-rc.1",
+    "@babel/preset-env": "^7.0.0-rc.1",
+    "@babel/register": "^7.0.0",
+    "@babel/polyfill": "^7.0.0",
     "eslint": "^5.12.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.15.0",
@@ -29,14 +31,15 @@
   "dependencies": {
     "atob": "^2.1.2",
     "bcrypt": "^3.0.3",
-    "mysql": "^2.16.0",
-    "mysql2": "^1.6.4",
     "body-parser": "^1.18.3",
+    "cross-env": "^5.2.0",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.0",
     "mongoose": "^5.4.18",
     "morgan": "^1.9.1",
+    "mysql": "^2.16.0",
+    "mysql2": "^1.6.4",
     "sequelize": "^4.43.0"
   }
 }
