fix(travis): fix env variables in travis

--- a/.env.example
+++ b/.env.example
@@ -34,5 +34,5 @@ MYSQL_DATABASE=storeo_db
 JWT_SECRET=a9bqbdfb^yFGM5mVDxPJZ
 SK_STRIPE=sk_test_wffTXj5jjdjQidaWhtdCGqFRz
 
-# Global ENV variable (dev or prod)
+# Global ENV variable (dev, test or prod)
 ENV=dev
