--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: node_js
+cache:
+  directories:
+    - node_modules
 services:
   - docker
 env:
@@ -6,3 +9,5 @@ env:
 before_install:
   - docker-compose build 
   - docker-compose up
+after_install:
+  - cd auth_svc && npm test
