--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ before_install:
   - docker-compose up -d
 script:
   - sleep 60 && docker exec -it storeoserver_auth_1 npm t
-  - sleep 60 && docker exec -it storeoserver_payments_1 npm t
+  - docker exec -it storeoserver_payments_1 npm t
